[package]
name = "amaya"
version = "0.1.0"
description = "Automate opinionated development configurations."
authors = ["Yehezkiel Dio Sinolungan <yehezkieldio@proton.me>"]
license = "MIT"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.7.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
which = "7.0.1"

[profile.release]
lto = true
strip = "symbols"
